--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -23,7 +23,7 @@
             <input id="id" type="hidden">
 
             <div class="row align-items-center mb-3">
-              <h1 class="text-center text-success mb-3 fw-bold display-6">Formulário de Entrada</h1>
+              <h2 class="text-center text-success mb-3 fw-bold ">Formulário de Entrada</h2>
             </div>
 
             <div id="row1" class="row">
@@ -220,7 +220,7 @@
             </div>
 
             <div class="d-flex justify-content-around m-3">
-              <button id="btnRegistrar" type="submit" class="btn btn-success w-25">Registrar</button>
+              <button id="btnRegistrar" type="submit" class="btn btn-success w-10">Registrar</button>
             </div>
           </form>
         </main>
