--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -17,9 +17,9 @@
 
     <div id="centralize-wrapper" class="centralize-wrapper">
       <div id="container" class="container secondary-color centralize border shadow-sm">
-        <main>
+        <main style="height: 85vh;">
           <div class="row align-items-center mb-3">
-            <h1 class="text-center text-success mb-3 fw-bold display-6">Formulário de Saída</h1>
+            <h2 class="text-center text-success mb-3 fw-bold">Formulário de Saída</h2>
           </div>
 
           <div class="row">
