--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -16,12 +16,12 @@
     <%- include('../partials/header') %>
         <div class="container-fluid">
             <main>
-                <div class="table-container">
-                    <div class="row">
-                        <div class="mt-5 mb-3">
-                            <h1 class="text-center text-success mb-3 fw-bold">Tabela com o Estoque Atual</h1>
-                        </div>
+                <div class="row">
+                    <div class="mt-5 mb-3">
+                        <h2 class="text-center text-success mt-4 mb-3 fw-bold">Tabela com o Estoque Atual</h2>
                     </div>
+                </div>
+                <div class="table-container">
                     <table class="table table-striped table-hover mb-0">
                         <thead>
                             <tr class="table-green">
@@ -92,3 +92,4 @@
 </body>
 
 </html>
+
