--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,7 +16,7 @@
 .centralize {
   background-color: var(--secondary-color);
   width: 100%;
-  max-width: 1740px;
+  max-width: 1600px;
   margin: 5rem 0 0 0;
   border-radius: 10px;
 }
@@ -83,7 +83,7 @@ input::placeholder {
   background-color: #fff;
   padding: 10px;
   border-radius: 5px;
-  height: 500px !important;
+  height: 80% !important;
 }
 
 #selected-tombos-container {
