--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg py-3 navbar-light bg-success d-flex justify-content-between">
     <div class="container-fluid">
       <div class="d-flex justify-content-between w-100 mx-5">
-        <div class="col-auto">
-          <a class="navbar-brand text-white" href="#">CEGPA / Controle de Estoque</a>
+        <div class="col-auto mt-1">
+          <a class="navbar-brand text-white " href="#">CEGPA / Controle de Estoque</a>
         </div>
         <div class="col-auto d-flex align-items-center">
           <form class="d-flex align-items-center w-100">
