--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -17,9 +17,9 @@
 
     <div id="centralize-wrapper" class="centralize-wrapper">
       <div id="container" class="container secondary-color centralize border shadow-sm">
-        <main style="height: 85vh;">
+        <main>
           <div class="row align-items-center mb-3">
-            <h2 class="text-center text-success mb-3 fw-bold">Formulário de Saída</h2>
+            <h1 class="text-center text-success mb-3 fw-bold display-6">Formulário de Saída</h1>
           </div>
 
           <div class="row">
@@ -37,8 +37,6 @@
                   </div>
                 </div>
               </div>
-
-
             </div>
 
             <!-- Coluna da Direita -->
@@ -133,9 +131,9 @@
                 </div>
               </div>
 
-            </div>
-            <div class="d-flex justify-content-around mt-3">
-              <button id="submit-btn" type="submit" class="btn btn-success w-10">Registrar Saída</button>
+              <div class="d-flex justify-content-around mt-3">
+                <button id="submit-btn" type="submit" class="btn btn-success w-10">Registrar Saída</button>
+              </div>
             </div>
           </div>
         </main>
@@ -247,7 +245,7 @@
         console.log("Dados a serem enviados:", data);
 
         try {
-          const response = await fetch("http://localhost:6060/saida", {
+          const response = await fetch("http://localhost:3030/saida", {
             method: "POST",
             headers: {
               "Content-Type": "application/json"
@@ -294,7 +292,7 @@
 
           if (value.length > 0) value = `(${value.slice(0, 2)}) ${value.slice(2)}`;
           if (value.length > 3) value = `${value.slice(0, 4)} ${value.slice(4)}`;
-          if (value.length > 10) value = `${value.slice(0, 10)}-${value.slice(10)}`;
+          if (value.length > 10) value = `${value.slice(0, 11)}-${value.slice(11)}`;
 
           e.target.value = value;
         });
