--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -8,6 +8,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        .table-container {
+            max-height: 78vh; /* Defina a altura máxima do contêiner */
+            overflow-y: auto; /* Habilitar scroll vertical */
+        }
+        .table-container table {
+            width: 100%;
+        }
+        .table-container thead th {
+            position: sticky;
+            top: 0;
+            background-color: #fff;
+            z-index: 1;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,74 +31,76 @@
     <%- include('../partials/header') %>
         <div class="container-fluid">
             <main>
-                <div class="row">
-                    <div class="mt-5 mb-3">
-                        <h2 class="text-center text-success mt-4 mb-3 fw-bold">Tabela com o Estoque Atual</h2>
+                <div class="table-container">
+                    <div class="row">
+                        <div class="mt-5 mb-3">
+                            <h1 class="text-center text-success mb-3 fw-bold">Tabela com o Estoque Atual</h1>
+                        </div>
                     </div>
                 </div>
                 <div class="table-container">
                     <table class="table table-striped table-hover mb-0">
                         <thead>
-                            <tr class="table-green">
-                                <th>ID</th>
-                                <th>Entrada</th>
+                            <tr >
+                                <th class="text-center">ID</th>
+                                <th class="text-center">Entrada</th>
                                 <th>Descrição</th>
-                                <th>Tombo</th>
-                                <th>Categoria</th>
-                                <th>Conta Contábil</th>
-                                <th>Documento de Origem</th>
-                                <th>Estoque</th>
-                                <th>Valor</th>
-                                <th>Situação</th>
-                                <th>Ações</th> <!-- Nova coluna de Ações -->
+                                <th class="text-center">Tombo</th>
+                                <th class="text-center">Categoria</th>
+                                <th class="text-center">Conta Contábil</th>
+                                <th class="text-center">Documento de Origem</th>
+                                <th class="text-center">Estoque</th>
+                                <th class="text-center">Valor</th>
+                                <th class="text-center">Situação</th>
+                                <th class="text-center">Ações</th> <!-- Nova coluna de Ações -->
                             </tr>
                         </thead>
                         <tbody>
-                            <% if (estoque.length> 0) { %>
+                            <% if (estoque.length > 0) { %>
                                 <% estoque.forEach(function(item) { %>
                                     <tr>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <%= item.id %>
                                         </td>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <%= new Date(item.data_de_entrada).toLocaleDateString('pt-BR') %>
                                         </td>
                                         <td class="py-1">
                                             <%= item.descricao %>
                                         </td>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <%= item.tombo %>
                                         </td>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <%= item.categoria %>
                                         </td>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <%= item.conta_contabil %>
                                         </td>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <%= item.doc_origem %>
                                         </td>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <%= item.estoque %>
                                         </td>
-                                        <td class="py-1">R$ <%= Number(item.valor).toFixed(2) %>
+                                        <td class="py-1 text-center">R$ <%= Number(item.valor).toFixed(2) %>
                                         </td>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <%= item.situacao %>
                                         </td>
-                                        <td class="py-1">
+                                        <td class="py-1 text-center">
                                             <a href="/estoque/edit/<%= item.id %>"
                                                 class="btn btn-warning btn-sm">Editar</a>
                                             <button type="button" class="btn btn-danger btn-sm delete-btn"
                                                 data-id="<%= item.id %>">Excluir</button>
                                         </td>
                                     </tr>
-                                    <% }); %>
-                                        <% } else { %>
-                                            <tr>
-                                                <td colspan="11" class="text-center">Ainda não há itens cadastrados</td>
-                                            </tr>
-                                            <% } %>
+                                <% }); %>
+                            <% } else { %>
+                                <tr>
+                                    <td colspan="11" class="text-center">Ainda não há itens cadastrados</td>
+                                </tr>
+                            <% } %>
                         </tbody>
                     </table>
                 </div>
@@ -92,4 +109,3 @@
 </body>
 
 </html>
-
