--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -19,7 +19,7 @@
       <div id="container" class="container secondary-color centralize border shadow-sm">
         <main>
           <div class="row align-items-center mb-3">
-            <h1 class="text-center text-success mb-3 fw-bold display-6">Formulário de Saída</h1>
+            <h2 class="text-center text-success mb-3 mt-3 fw-bold">Formulário de Saída</h2>
           </div>
 
           <div class="row">
@@ -131,8 +131,8 @@
                 </div>
               </div>
 
-              <div class="d-flex justify-content-around mt-3">
-                <button id="submit-btn" type="submit" class="btn btn-success w-10">Registrar Saída</button>
+              <div class="d-flex justify-content-around">
+                <button id="submit-btn" type="submit" class="btn btn-success mb-3 w-10">Registrar Saída</button>
               </div>
             </div>
           </div>
