fix: modificação na navbar

--- a/src/views/pages/404.ejs
+++ b/src/views/pages/404.ejs
@@ -38,7 +38,7 @@
     <div class="container">
         <h1>404</h1>
         <p>Página Não Encontrada</p>
-        <p><a href="/entrada">Voltar para a página inicial</a></p>
+        <p><a href="/tabela">Voltar para a Tabela</a></p>
     </div>
 </body>
 </html>
