--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -216,7 +216,6 @@
                   <textarea id="observacao" type="text" class="form-control" name="observacao"></textarea>
                 </div>
               </div>
-
             </div>
 
             <div class="d-flex justify-content-around m-3">
@@ -238,8 +237,8 @@
           <div class="modal-body">
             <p id="errorMessage"></p>
           </div>
-          <div class="modal-footer"> <button type="button" class="btn btn-secondary"
-              data-bs-dismiss="modal">Fechar</button>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
           </div>
         </div>
       </div>
@@ -269,7 +268,7 @@
         let qtd = document.getElementById('qtd').value;
 
         if (data && subgrupo && qtd) {
-          let ano = new Date(data).getUTCFullYear().toString(); // Ajuste aqui
+          let ano = new Date(data).getUTCFullYear().toString();
           fetch(`/ultimo-tombo?ano=${ano}&subgrupo=${subgrupo}`)
             .then(response => response.json())
             .then(data => {
@@ -291,8 +290,7 @@
       });
 
       document.getElementById('formulario-entrada').addEventListener('submit', function (event) {
-        event.preventDefault(); // Impede o envio do formulário
-
+        event.preventDefault();
         const formData = new FormData(this);
         const json = JSON.stringify(Object.fromEntries(formData));
 
@@ -325,7 +323,5 @@
       });
 
     </script>
-
 </body>
-
 </html>
