feat: inicio da implementação das rotas de pesquisa e relatorio

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,17 +2,21 @@
   <div class="container-fluid">
     <div class="d-flex justify-content-between w-100 mx-5">
       <div class="col-auto mt-1">
-        <a class="navbar-brand text-white " href="/tabela">CEGPA / Controle de Estoque</a>
+        <a class="navbar-brand text-white" href="/tabela">CEGPA / Controle de Estoque</a>
       </div>
       <div class="col-auto d-flex align-items-center">
         <form class="d-flex align-items-center w-100">
-          <a href="/entrada" class=" btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Entrada</a>
-          <a href="/saida" class=" btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Saída</a>
-          <a href="/tabela" class=" btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Tabela</a>
+          <a href="/entrada" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Entrada</a>
+          <a href="/saida" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Saída</a>
+          <a href="/tabela" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Tabela</a>
+          <a href="/relatorios" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Relatórios</a>
+          <a href="/historico-movimentacao-page" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Histórico</a>
+          <a href="/pesquisa-itens-saidos" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Itens Saídos</a>
+          <a href="/pesquisa-avancada-page" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Pesquisa Avançada</a>
         </form>
       </div>
       <div class="col-auto mt-1">
-        <a href="/logout" class=" btn btn-danger mx-2 w-100 btn-adm fw-bold">Sair</a>
+        <a href="/logout" class="btn btn-danger mx-2 w-100 btn-adm fw-bold">Sair</a>
       </div>
     </div>
   </div>
