--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -16,7 +16,7 @@
   <%- include('../partials/header') %>
 
     <div id="centralize-wrapper" class="centralize-wrapper">
-      <div id="container" class="container secondary-color centralize border shadow-sm">
+      <div style="max-width: 70%; min-width: 70%;" id="container" class="container secondary-color centralize border shadow-sm">
         <main>
           <div class="row align-items-center mb-3">
             <h2 class="text-center text-success mb-3 mt-3 fw-bold">Formulário de Saída</h2>
@@ -130,11 +130,11 @@
                   </div>
                 </div>
               </div>
-
-              <div class="d-flex justify-content-around">
-                <button id="submit-btn" type="submit" class="btn btn-success mb-3 w-10">Registrar Saída</button>
-              </div>
             </div>
+            <div class="d-flex justify-content-around">
+              <button id="submit-btn" type="submit" class="btn btn-success mb-3 w-10">Registrar Saída</button>
+            </div>
+
           </div>
         </main>
       </div>
@@ -418,4 +418,5 @@
 
     </script>
 </body>
+
 </html>
