--- a/src/views/pages/relatorios.ejs
+++ b/src/views/pages/relatorios.ejs
@@ -9,35 +9,42 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+    
   <!-- Navbar -->
   <%- include('../partials/header') %>
 
   <div class="container-fluid">
-    <main>
-      <div class="table-container">
-        <div class="row mt-3">
-          <div class="mt-5 mb-3">
-            <h2 class="text-center text-success mb-3 mt-4 fw-bold">Relatórios de Estoque</h2>
+    <div id="centralize-wrapper" class="centralize-wrapper relatorio-margin">
+      <div id="container" class="container secondary-color mt-5 border shadow-sm">
+        <main class="mt-3">
+          <div class="table-container">
+            <div class="row">
+              <div class="mb-3">
+                <h2 class="text-center text-success mb-3 fw-bold">Relatórios de Estoque</h2>
+              </div>
+            </div>
           </div>
-        </div>
+          <div class="table-container">
+            <div class="row">
+              <div class="col-md-6 mb-4 text-center">
+                <h3>Entradas</h3>
+                <hr>
+                <div id="relatorio-entradas" class="mt-3"></div>
+              </div>
+              <div class="col-md-6 mb-4 text-center">
+                <h3>Saídas</h3>
+                <hr>
+                <div id="relatorio-saidas" class="mt-3"></div>
+              </div>
+            </div>
+          </div>
+        </main>
       </div>
-      <div class="table-container">
-        <div class="mb-4">
-          <h2>Relatório de Entradas</h2>
-          <button id="fetch-entradas" class="btn btn-primary">Obter Relatório de Entradas</button>
-          <div id="relatorio-entradas" class="mt-3"></div>
-        </div>
-        <div class="mb-4">
-          <h2>Relatório de Saídas</h2>
-          <button id="fetch-saidas" class="btn btn-primary">Obter Relatório de Saídas</button>
-          <div id="relatorio-saidas" class="mt-3"></div>
-        </div>
-      </div>
-    </main>
+    </div>
   </div>
 
   <script>
-    document.getElementById('fetch-entradas').addEventListener('click', async () => {
+    async function carregarRelatorioEntradas() {
       const response = await fetch('/relatorio-entradas');
       const data = await response.json();
       const relatorioDiv = document.getElementById('relatorio-entradas');
@@ -45,7 +52,7 @@
         <table class="table table-striped table-hover mb-0">
           <thead>
             <tr>
-              <th>Mês/Ano</th>
+              <th>Ano/Mês</th>
               <th>Total de Entradas</th>
             </tr>
           </thead>
@@ -58,9 +65,9 @@
           </tbody>
         </table>
       `;
-    });
+    }
 
-    document.getElementById('fetch-saidas').addEventListener('click', async () => {
+    async function carregarRelatorioSaidas() {
       const response = await fetch('/relatorio-saidas');
       const data = await response.json();
       const relatorioDiv = document.getElementById('relatorio-saidas');
@@ -68,7 +75,7 @@
         <table class="table table-striped table-hover mb-0">
           <thead>
             <tr>
-              <th>Mês/Ano</th>
+              <th>Ano/Mês</th>
               <th>Total de Saídas</th>
             </tr>
           </thead>
@@ -81,7 +88,13 @@
           </tbody>
         </table>
       `;
-    });
+    }
+
+    // Carregar os relatórios ao carregar a página
+    window.onload = () => {
+      carregarRelatorioEntradas();
+      carregarRelatorioSaidas();
+    };
   </script>
 </body>
 </html>
