--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <style>
         .table-container {
-            max-height: 80vh;
+            max-height: 78vh;
             overflow-y: auto;
             overflow-x: hidden;
         }
@@ -45,7 +45,7 @@
                 <div class="table-container">
                     <div class="row mt-3">
                         <div class="mt-5 mb-3">
-                            <h2 class="text-center text-success mb-3 mt-4 fw-bold">Tabela com o Estoque Atual</h2>
+                            <h2 class="text-center text-success mb-3 mt-5 fw-bold">Tabela com o Estoque Atual</h2>
                         </div>
                     </div>
                 </div>
@@ -69,8 +69,7 @@
                         <tbody>
                             <% if (estoque.length> 0) { %>
                                 <% estoque.forEach(function(item) { %>
-                                    <tr> <td class="py-1 text-center"> <%= item.id %>
-                                        </td>
+                                    <tr> <td class="py-1 text-center"> <%= item.id %> </td>
                                         <td class="py-1 text-center"> <%= new Date(item.data_de_entrada).toLocaleDateString('pt-BR') %> </td>
                                         <td class="py-1"> <%= item.descricao %> </td>
                                         <td class="py-1 text-center"> <%= item.tombo %> </td>
