fix: conclusão do historico de novimentaçoes

--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -45,7 +45,7 @@
                 <div class="col-md-4">
                   <div id="doc_saida-div" class="mb-3">
                     <label class="form-label fw-bold">Termo de Responsabilidade</label>
-                    <input style="background-color: var(secondary-color) !important;" id="doc_saida" type="text"
+                    <input style="background-color: var(secondary-color) !important;" name="doc_saida" id="doc_saida" type="text"
                       class="form-control">
                   </div>
 
