--- a/src/views/pages/relatorios.ejs
+++ b/src/views/pages/relatorios.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,93 +9,96 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    
+
   <!-- Navbar -->
   <%- include('../partials/header') %>
 
-  <div class="container-fluid">
-    <div id="centralize-wrapper" class="centralize-wrapper relatorio-margin">
-      <div id="container" class="container secondary-color mt-5 border shadow-sm">
-        <main class="mt-3">
-          <div class="table-container">
-            <div class="row">
-              <div class="mb-3">
-                <h2 class="text-center text-success mb-3 fw-bold">Relatórios de Estoque</h2>
+    <div class="container-fluid">
+      <div id="centralize-wrapper" class="centralize-wrapper relatorio-margin">
+        <div id="container" class="container secondary-color mt-5 border shadow-sm">
+          <main class="mt-3">
+            <div class="table-container">
+              <div class="row">
+                <div class="mb-3">
+                  <h2 class="text-center text-success mb-3 fw-bold">Relatórios de Estoque</h2>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="table-container">
-            <div class="row">
-              <div class="col-md-6 mb-4 text-center">
-                <h3>Entradas</h3>
-                <hr>
-                <div id="relatorio-entradas" class="mt-3"></div>
-              </div>
-              <div class="col-md-6 mb-4 text-center">
-                <h3>Saídas</h3>
-                <hr>
-                <div id="relatorio-saidas" class="mt-3"></div>
+            <div class="table-container">
+              <div class="row">
+                <div class="col-md-6 mb-4 text-center">
+                  <h3>Entradas</h3>
+                  <hr>
+                  <div id="relatorio-entradas" class="mt-3"></div>
+                </div>
+                <div class="col-md-6 mb-4 text-center">
+                  <h3>Saídas</h3>
+                  <hr>
+                  <div id="relatorio-saidas" class="mt-3"></div>
+                </div>
               </div>
             </div>
-          </div>
-        </main>
+          </main>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script>
-    async function carregarRelatorioEntradas() {
-      const response = await fetch('/relatorio-entradas');
-      const data = await response.json();
-      const relatorioDiv = document.getElementById('relatorio-entradas');
-      relatorioDiv.innerHTML = `
-        <table class="table table-striped table-hover mb-0">
-          <thead>
-            <tr>
-              <th>Ano/Mês</th>
-              <th>Total de Entradas</th>
-            </tr>
-          </thead>
-          <tbody>
-            ${data.map(item => `
-              <tr>
-                <td>${item.mes_ano}</td>
-                <td>${item.total_entradas}</td>
-              </tr>`).join('')}
-          </tbody>
-        </table>
-      `;
-    }
+    <script>
+      async function carregarRelatorioEntradas() {
+        const response = await fetch('/relatorio-entradas');
+        const data = await response.json();
+        const relatorioDiv = document.getElementById('relatorio-entradas');
+        relatorioDiv.innerHTML = `
+    <table class="table table-striped table-hover mb-0">
+      <thead>
+        <tr>
+          <th>Mês/Ano</th>
+          <th>Total de Entradas</th>
+        </tr>
+      </thead>
+      <tbody>
+        ${data.map(item => `
+          <tr>
+            <td>${item.mes_ano}</td>
+            <td>${item.total_entradas}</td>
+          </tr>`).join('')}
+      </tbody>
+    </table>
+  `;
+      }
 
-    async function carregarRelatorioSaidas() {
-      const response = await fetch('/relatorio-saidas');
-      const data = await response.json();
-      const relatorioDiv = document.getElementById('relatorio-saidas');
-      relatorioDiv.innerHTML = `
-        <table class="table table-striped table-hover mb-0">
-          <thead>
-            <tr>
-              <th>Ano/Mês</th>
-              <th>Total de Saídas</th>
-            </tr>
-          </thead>
-          <tbody>
-            ${data.map(item => `
-              <tr>
-                <td>${item.mes_ano}</td>
-                <td>${item.total_saidas}</td>
-              </tr>`).join('')}
-          </tbody>
-        </table>
-      `;
-    }
+      async function carregarRelatorioSaidas() {
+        const response = await fetch('/relatorio-saidas');
+        const data = await response.json();
+        const relatorioDiv = document.getElementById('relatorio-saidas');
+        relatorioDiv.innerHTML = `
+    <table class="table table-striped table-hover mb-0">
+      <thead>
+        <tr>
+          <th>Mês/Ano</th>
+          <th>Total de Saídas</th>
+        </tr>
+      </thead>
+      <tbody>
+        ${data.map(item => `
+          <tr>
+            <td>${item.mes_ano}</td>
+            <td>${item.total_saidas}</td>
+          </tr>`).join('')}
+      </tbody>
+    </table>
+  `;
+      }
 
-    // Carregar os relatórios ao carregar a página
-    window.onload = () => {
-      carregarRelatorioEntradas();
-      carregarRelatorioSaidas();
-    };
-  </script>
+      // Carregar os relatórios ao carregar a página
+      window.onload = () => {
+        carregarRelatorioEntradas();
+        carregarRelatorioSaidas();
+      };
+
+    </script>
 </body>
+
 </html>
